syntax = "proto3";

package protos;

option go_package = "protos/crawler";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service CrawlerMaster {
  rpc AddResource(ResourceSpec) returns (NodeSpec) {
    option (google.api.http) = {
      post: "/crawler/resource"
      body: "*"
    };
  }

  rpc DelResource(ResourceSpec) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/crawler/resource"
      body: "*"
    };
  }
}

message ResourceSpec {
  string id = 1;
  string name = 2;
  string assigned_node = 3;
  int64 create_time = 4;
}

message NodeSpec {
  string id = 1;
  string Address = 2;
}